<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxedEdges="all">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:boxedEdges="all">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_statement"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:text="Address" />

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:text="Port" />

                <EditText
                    android:id="@+id/editTextPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <Switch
                android:id="@+id/switchHeartRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/option_heart_rate" />

            <Switch
                android:id="@+id/switchStepsCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/option_steps" />

            <Switch
                android:id="@+id/switchGeoLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/option_geo_location" />

            <Switch
                android:id="@+id/switchGeoAlwaysOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/option_geo_always_on" />

            <Switch
                android:id="@+id/switchAirPressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_air_pressure" />

            <Switch
                android:id="@+id/switchDisplayOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_keep_on" />

        </LinearLayout>
    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>